style.css
body {
    font-family: "Lato", sans-serif;
    margin: 0;
    padding: 0;
    border: 0;
}

/*----------nav inspired by bootsnip!------------*/



.logo a {
      line-height: 60px;
      position: fixed;
      float: left;
      margin: 16px 46px;
      color: #fff;
      font-weight: bold;
      font-size: 25px;
      letter-spacing: 2px;
}

nav {
      position: fixed;
      width: 100%;
      line-height: 60px;
      z-index: 1;
}

nav ul {
      line-height: 60px;
      list-style: none;
      background: rgba(0, 0, 0, 0);
      overflow: hidden;
      color: #fff;
      padding: 0;
      text-align: right;
      margin: 0;
      padding-right: 40px;
      transition: 1s;
}

nav.black ul {
      background: #000;
}

nav ul li {
      display: inline-block;
      padding: 16px 40px;;
}

nav ul li a {
      text-decoration: none;
      color: #fff;
      font-size: 16px;
}

.menu-icon {
      line-height: 60px;
      width: 100%;
      background: #000;
      text-align: right;
      box-sizing: border-box;
      padding: 15px 24px;
      cursor: pointer;
      color: #fff;
      display: none;
}



.menu ul li a:hover {
    color: #3c6e71;
    text-decoration: none;
}

.logo a:hover{
    color:#3c6e71;
    text-decoration: none;
}

.menu li{
    list-style: none;
    text-decoration: none;
}


/*-----------blockdivider-----------*/

.block-divider {
    background-color: #0d1b2a;
    width: 50%;
    height: 3px;
}

/*-------------------callout container-----------*/


.callout-container {
    width: 100%;
}

.hero-image {
    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(Ash11.jpg) fixed ;
    height: 100%;
    background-position: center top;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    width: 100%;
    padding-bottom: 5%;
    flex: 1;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
}


.hero-image:hover {
    transition: flex 0.5s ease-in-out;
}
/*------------hover from hover.css---------*/

@-webkit-keyframes hvr-pulse-grow {
  to {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
  }
}
@keyframes hvr-pulse-grow {
  to {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
  }
}
.hvr-pulse-grow {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);

}
.hvr-pulse-grow:hover, .hvr-pulse-grow:focus, .hvr-pulse-grow:active {
  -webkit-animation-name: hvr-pulse-grow;
  animation-name: hvr-pulse-grow;
  -webkit-animation-duration: 0.3s;
  animation-duration: 0.3s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
   color: #3c6e71;
}
 

/*-----------jumbotron------------*/

.jumbotron {
    background-color: rgba(0, 0, 0, 0.5);
    margin-top: 10%;
    margin-left: 20%;
    margin-right: 20%;
    margin-bottom: 20px;
}

.jumbotron h1 {
    color: #d9d9d9;
    font-size: 80px;
    font-weight: bold;
    margin-bottom: 15px;
    text-transform: capitalize;
}



.jumbotron .lead {
        font-size: 60px;
        margin: 0px 0;
        color: #d9d9d9;
        padding-bottom: 5px;
}

.jumbotron p {
    font-size: 20px;
    text-decoration: solid;
    color: #d9d9d9;
}
/*-----------button---------*/

.btn {
    border-radius: 25px;
    background-color: #284b63;
    margin-top: 10px;
    padding-left: 30px;
    padding-right: 30px;
    
}

/*---------about-------*/

.about h1 {
    padding-top: 30px;
    font-size: 50px;
    font-weight: 300;
    align-items: center;
    width: 40%;
    height: 10%;
    padding-bottom: 10px;
    margin-left: 30%;
    text-transform: uppercase;
    text-decoration: solid;
    border: 3px dotted #3c6e71;
}

.about-container {
    background-color: #353535;
    padding-bottom: 35px;
    color: #fafafa;
    text-align: center;
    width: 100%;
    max-width: 100%;
    padding-top: 50px;
    padding-left: 0;
}

.about-container p {
    font-family: 'Lato', sans-serif;
    color: #d9d9d9;
    font-size: 18px;
    margin-top: 90px;
    margin-bottom: 50px;
    padding-left: 15px;
    padding-right: 15px;
}

.picture-circle {
    width: 70%;
    height: 70%;
    margin-top: 20%;
    display: flex;
    margin-left: 70px;
    border-radius: 40%;
    border: 3px solid #fff;
}

/*----------gallery-------*/

.container-gallery{
   background-color: #3c6e71;
    padding-bottom: 35px;
    color: #fafafa;
    text-align: center;
    padding-left: 15%;
    padding-right: 15%;
    padding-top: 50px;
    width: 100%
}

 .container-gallery h1 {
     padding-top: 30px;
    font-size: 60px;
    color: #d9d9d9;
    font-weight: 300;
    text-transform: uppercase;
    text-decoration: solid;
    border: 3px solid black;
 }
 

 .para {
     color: white;
     margin-bottom: 2rem;
 }

.gallery-wrap {
    padding-top: 20px;
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 70vh;
}

.item {
    flex: 1;
    height: 100%;
    background-position: center top;
    background-size: cover;
    background-repeat: none;
    transition: flex 0.8s ease;
    }

.item:hover{
    flex: 4;
  }

.item-1 { 
    background-image: url('Ash.jpg');
}

.item-2 { 
    background-image: url('Ash11.jpg');
}

.item-3 { 
    background-image: url('ashfull.jpg');
}

.item-4 { 
    background-image: url('ashgreen.jpg');
}

.item-5 { 
    background-image: url('ashsmolder.jpg');
}

  
  img{
    display: block;
    width: 32px;
  }

/*--------------showreel-----------*/


.showreel-container {
    background-color: #284b63;
    padding-bottom: 35px;
    color: #d9d9d9;
    text-align: center;
    width: 100%;
    max-width: 100%;
    padding-top: 50px;
}
    

.showreel h1 {
    padding-top: 30px;
    font-size: 50px;
    font-weight: 300;
    align-items: center;
    width: 50%;
    height: 10%;
    padding-bottom: 10px;
    margin-left: 25%;
    text-transform: uppercase;
    text-decoration: solid;
    border: 3px dotted #3c6e71;
}

.showreel-container p {
    margin-top: 30px;
    margin-bottom: 50px;
}

.material {
    padding-top: 5%;
    padding-right: 10px;
}

.showreel-container audio {
    padding-right: 30px;
    padding-left: 10px;
}

/*------------CV------------*/

.cv-container {
    background-color: #353535;
    padding-bottom: 35px;
    color: #fafafa;
    text-align: center;
    width: 100%;
    max-width: 100%;
    padding-left: 15%;
    padding-right: 15%;
}

.cv-container h1 {
    padding-top: 30px;
    margin: 50px 0 30px;
    font-size: 60px;
    font-weight: 300;
    text-transform: uppercase;
    text-decoration: solid;
    border: solid black;
    position: relative;
    left: 0;
    }

/*--------email--------*/

.form-row { 
    margin-left: 11px;
    margin-right: 80px;
    border: 0; 
    padding-bottom: 5px;
    color: #fafafa; 
}

.form-group {
    color: #fafafa;
    margin-left: 10px;
}

.form-left {
    background-color: #353535;
    padding-top: 15px;
    padding-left: 5px;
}

.footer-contact {
    padding-bottom: 10px;
}

.agent-details {
    float: left;
    background-color: #353535;
}

.agent-details h3 {
    padding-top: 40px;
    margin-bottom: 30px;
}

.agent-details h6 {
    padding-bottom: 25px;
    margin-top: 40px;
    color: #fafafa;
}

.agent-details p {
    font-size: 15px;
    font-weight: bold;
    text-align: center;
    color: #fafafa;
}

.contact-container {
    background-color: #fff;
    padding-bottom: 100px;
    color: #353535;
    text-align: center;
    padding-left: 15%;
    padding-right: 15%;
    max-width: 100%;
}

.contact-container h1 {
    padding-top: 30px;
    padding-left: 0;
    margin: 50px 0 30px;
    font-size: 60px;
    font-weight: 300;
    text-transform: uppercase;
    text-decoration: solid;
    border: solid #0d1b2a;
    color: #353535;
}

.contact-container h3 {
    color: #353535;
    margin-bottom: 1rem;
}

 /*---------footer------*/

footer {
    height: 80px;
    background-color: rgba(0, 0, 0, 0.9);
    width: 100%;
}

.copy {
    color: #fafafa;
    }

 .social-media-links {
    
    text-align: right;
    letter-spacing: 30px;
    list-style: none;
    color: #d9d9d9;
    font-size: 35px;
 }

 .social-media-links li {
     display: inline;
 }

 .social-media-links i{
     font-size: 140%;
     margin-top: 5px;
     padding: 10px 10px;
     color: #3c6e71;
 }

 /*----------footer animation hover.css code-------*/

 @-webkit-keyframes hvr-pop {
  50% {
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
  }
}
@keyframes hvr-pop {
  50% {
    -webkit-transform: scale(1.2);
    transform: scale(1.2);
  }
}
.hvr-pop {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
}
.hvr-pop:hover, .hvr-pop:focus, .hvr-pop:active {
  -webkit-animation-name: hvr-pop;
  animation-name: hvr-pop;
  -webkit-animation-duration: 0.3s;
  animation-duration: 0.3s;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
}
/*----------------media--------------*/

@media screen and (max-width:1024px){
    
    footer {
        width: 100%;
        
    }
    .social-media-links {
    
    text-align: center;
    letter-spacing: 15px;
    list-style: none;
    color: darkgreen;
    font-size: 35px;
    }
    .social-media-links i{
     font-size: 120%;
     margin-top: 5px;
     padding: 10px 10px;
     color: darkgreen;
 }
}

@media screen and (max-width:720px){

  body {
      width: 100%;
  }

    .logo a{
            position: fixed;
            top: 0;
            margin-top: 12px;
            font-size: 20px;
      }

      nav ul {
            max-height: 0px;
            background: #000;
      }

      nav.black ul {
            background: #000;
      }

      .showing {
            max-height: 34em;
      }

      nav ul li {
            box-sizing: border-box;
            width: 100%;
            padding: 24px;
            text-align: center;
      }

      .menu-icon {
            display: block;
      }

    .jumbotron h1 {
        font-size: 40px;
    }

    .jumbotron .lead {
        font-size: 20px;
    }

    .jumbotron p {
        font-size: 15px;
    }

    .picture-circle {
    display: none;
}

.about-container p {
    padding-bottom: 0px;
    padding-top: 0px;
    margin-top: 10px;
    margin-bottom: 0;
}

    .showreel-container audio {
    float: right;
}
    .cv-container iframe {
        display: none;
    }

    .contact-container h1 {
        font-size: 40px;
    }

    .contact-container h3 {
        font-size: 20px;
    }

    .form-group {
        width: 100%;
        padding-right: 0;
        margin: 0;
        text-align: center;
    }

    .agent-details {
        display: none;
    }

    .navbar-logo {
        font-size: 20px;
    }
    footer {
        width: 100%;
        
    }
    .social-media-links {
    
    text-align: left;
    letter-spacing: 10px;
    list-style: none;
    color: darkgreen;
    font-size: 35px;
    }
    .social-media-links i{
     font-size: 80%;
     margin-top: 5px;
     padding: 10px 10px;
     color: darkgreen;
 }
}

